--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Zoho snippet -->
+    <script src="https://cdn.pagesense.io/js/holonym/cdaaea591b74463d9ffafb4453b0c41b.js"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Holonym"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta content="Holo" property="og:title">
+    <meta content="Holonym is a Digital Identity Solution Powered by Cryptography. Create &amp; Discover identities using Holo." property="og:description">
+    <meta content="https://app.holonym.id/images/Holo-Open-Graph.jpg" property="og:image">
+    <meta content="Holo" property="twitter:title">
+    <meta content="Holonym is a Digital Identity Solution Powered by Cryptography. Create &amp; Discover identities using Holo." property="twitter:description">
+    <meta content="https://app.holonym.id/images/Holo-Open-Graph.jpg" property="twitter:image">
+    <meta property="og:type" content="website">
+    <link href="%PUBLIC_URL%/favicon.jpg" rel="shortcut icon" type="image/x-icon"/>
+    <link href="%PUBLIC_URL%/webclip.jpg" rel="apple-touch-icon" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Holonym</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
